[project]
name = "weebiee-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "grpcio>=1.72.1",
    "grpcio-tools>=1.72.1",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "pyspark-client>=4.0.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
